Improve JPAQueryBuilder to reduce number of instances requiring DISTINCT (SELECT ID does not require distinct ever), and make logic to add ORDER BY exprs to SELECT only happen if DISTINCT is on. Add CUSTOM_PROJECTION_NODISTINCT to allow for looser projection semantics where no distinct is required